--- a/iChatty/XIBs/ProfileVC.xib
+++ b/iChatty/XIBs/ProfileVC.xib
@@ -90,6 +90,11 @@
                         <constraint firstAttribute="bottom" secondItem="8Pa-Av-PPi" secondAttribute="bottom" constant="8" id="ZNp-ap-XNT"/>
                         <constraint firstItem="2wb-T6-oX5" firstAttribute="centerY" secondItem="fFU-Pu-rvz" secondAttribute="centerY" constant="-20" id="mF7-Gc-jn5"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
